<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 75py
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="filePath"
            type="String" />

        <variable
            name="mimeType"
            type="String" />

        <variable
            name="shortcutName"
            type="String" />

        <variable
            name="shortcutIcon"
            type="android.net.Uri" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <Button
            android:id="@+id/filePickerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/file_picker" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/targetFilePathWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_narrow">

            <EditText
                android:id="@+id/targetFilePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_path"
                android:inputType="textUri|textMultiLine"
                android:text="@{filePath}"
                tools:text="file://aaa.jpg" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/targetShortcutNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_narrow">

            <EditText
                android:id="@+id/targetShortcutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shortcut_name"
                android:inputType="textMultiLine"
                android:text="@{shortcutName}"
                tools:text="aaa.jpg" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_narrow"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/targetShortcutIcon"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@{shortcutIcon}" />

            <Button
                android:id="@+id/iconPickerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_narrow"
                android:enabled="@{filePath != null &amp;&amp; !filePath.isEmpty()}"
                android:onClick="@{onClickListener}"
                android:text="@string/icon_picker" />
        </LinearLayout>

        <Button
            android:id="@+id/createShortcutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="@{filePath != null &amp;&amp; !filePath.isEmpty()}"
            android:onClick="@{onClickListener}"
            android:text="@string/create_shortcut" />

    </LinearLayout>
</layout>
